<resources>
    <string name="app_name">AndroidAcademyMinsk</string>

    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="activity">Activity</string>
    <string name="email">Email</string>
    <string name="type_message">Type your message here...</string>
    <string name="we_like_android">We like Android!</string>
    <string name="lesson_01_intent">01 Intent</string>
    <string name="name_lesson_01_intent">Lesson 01 Intent</string>

    <string name="lesson_02_layout">02 Layout</string>
    <string name="name_lesson_02_layout">Lesson 02 Layout</string>
    <string name="_1">В студии версии 3.0 появились новые возможности. Теперь вы можете задать
        аватар, имя и случайный текст без создания собственных ресурсов. Это бывает полезно,
        когда ресурсы берутся из внешнего источника. Вам не нужно создавать временные ресурсы,
        которые увеличивают размер приложения и которые можно забыть удалить.</string>

    <string name="lesson_03_RecyclerView">03 RecyclerView</string>
    <string name="name_lesson_03_RecyclerView">Lesson 03_RecyclerView</string>

    <string name="les04_MultiThreads">04 MultiThreads</string>
    <string name="les04_asynctask_activity">AsyncTask Activity</string>
    <string name="les04_loader_activity">Loader Activity</string>
    <string name="les04_threads_activity">Threads Activity</string>
    <string name="les04_done">Done!</string>
    <string name="les04_warning">First create!</string>
    <string name="les04_create">Create!</string>
    <string name="les04_cancel">Cancel!</string>
    <string name="les04_on_pre_execute">onPreExecute</string>
    <string name="les04_on_post_execute">onPostExecute</string>
    <string name="les04_wip">Work in progress</string>
    <string name="les04_illegal_argument_exception">Unknown loader id</string>
    <string name="les04_message_on_post_execute">Post execute run</string>
    <string name="les04_work_interrupted">Work interrupted</string>
    <string name="les04_status">Status:</string>

    <string name="lesson_05_Network">05 Network</string>
    <string name="les05_enter_keyword">Enter keyword</string>
    <string name="les05_search">Search</string>
    <string name="les05_poster">Poster</string>
    <string name="les05_vogella">Vogella</string>

    <string name="lesson_06_DB">06 Database</string>

</resources>
