<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".les_04_Base_Multitreading.handler.Les04ThreadsActivity"
    android:background="@color/colorThreads">

    <Button
        android:id="@+id/btnThreadsCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btnThreadsStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btnThreadsStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btnThreadsCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThreadsCreate"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btnThreadsCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThreadsStart"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <TextView
        android:id="@+id/tvThreads"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/colorMultiThreadsTextLight"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThreadsStart" />

</androidx.constraintlayout.widget.ConstraintLayout>